--- a/Yagi Design/010_Yagi_Class.ipynb
+++ b/Yagi Design/010_Yagi_Class.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Class for Representing Yagis and Other Antennas\n",
+    "# A Class for Representing Yagis and Other Sectional Antennas\n",
     "\n",
     "This notebook contains a Python class for representing Yagis and other antennas constructed with telescoping tubing.\n",
     "After the antenna is described declaratively (i.e. by setting various properties) the user can generate the NEC5 geometry cards for simulation, as well as simple solid models that can be displayed in the accompanying visualizer widget.\n",
