--- a/Yagi Design/012_Yagi_Class_Part_3.ipynb
+++ b/Yagi Design/012_Yagi_Class_Part_3.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A Class for Representing Yagis and Other Antennas:<br>Part 3, Setting Properties\n",
+    "# A Class for Representing Yagis and Other Sectional Antennas:<br>Part 3, Setting Properties\n",
     "\n",
     "You can define the geometry of your antenna by setting properties; here's a fuller discussion of the details.\n",
     "<br />\n",
@@ -4092,7 +4092,7 @@
     "| | |\n",
     "| len | Overall element length = variable outer section + fixed-length inner sections|\n",
     "| tag | Integer tag used by NEC; default = 1 for element[0], etc.|\n",
-    "| driven | Identify the driven element; default = element[1]|\n",
+    "| driven | Identify the driven element; default = element[1];   ```'driven':True```|\n",
     "| | |\n",
     "| segnums | Number of NEC segments for each section: ```'segnums':[10,8,12]```|\n",
     "| seg_per_m | Alternately, specify segments per meter of section length: ```'seg_per_m':5```|\n",
